config: Add `include` property to `tsconfig.json` to specify `src` and `prisma` directories.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "skipLibCheck": true,
     "esModuleInterop": true
   },
+  "include": ["src/**/*", "prisma/**/*"],
   "exclude": ["node_modules", "dist", "generated/prisma"]
 }
