--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ BETTER_AUTH_URL=http://localhost:5000
 
 # The email address that should be promoted to ADMIN role when running the seed script
 ADMIN_EMAIL="admin@foodhub.com"
+
+# Gmail SMTP configuration for sending emails
+GMAIL_NAME="your-email@gmail.com"
+GMAIL_APP_PASS="your-gmail-app-password"
