feat: Refactor admin seeding to use auth service with new environment variables, prevent verification emails during seeding, and remove review seeding.

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ BETTER_AUTH_URL=http://localhost:5000
 
 # The email address that should be promoted to ADMIN role when running the seed script
 ADMIN_EMAIL="admin@foodhub.com"
+ADMIN_PASS="your_admin_password"
+ADMIN_NAME="System Admin"
 
 # Gmail SMTP configuration for sending emails
 GMAIL_NAME="your-email@gmail.com"
