feat: implement google social authentication

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ ADMIN_NAME="System Admin"
 # Gmail SMTP configuration for sending emails
 GMAIL_NAME="your-email@gmail.com"
 GMAIL_APP_PASS="your-gmail-app-password"
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
